k8s/base/spoke-video.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-hub
  labels:
    app: video-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-hub
  template:
    metadata:
      labels:
        app: video-hub
    spec:
      containers:
        - name: video-hub
          image: cohort/video-hub:latest
          ports:
            - containerPort: 8005
              name: http
            - containerPort: 50055
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: video-hub
  labels:
    app: video-hub
spec:
  type: ClusterIP
  ports:
    - port: 8005
      targetPort: 8005
      name: http
    - port: 50055
      targetPort: 50055
      name: grpc
  selector:
    app: video-hub
